--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "2"
 
 services:
-  mysql:
-    container_name: mysql
+  mysql5:
+    container_name: mysql5
     image: mysql:5.5.60
     restart: always
     volumes:
@@ -19,10 +19,8 @@ services:
     restart: always
     image: nginx:1.13
     ports:
-      - 80:80
-      - 8080:8080
       - 443:443
-      - 5050:5050
+      - 6060:6060
       - 5553:5553
     volumes:
       - ./conf/vhosts:/etc/nginx/conf.d
