--- a/conf/vhosts/demo-liumapp.conf
+++ b/conf/vhosts/demo-liumapp.conf
@@ -1,10 +1,10 @@
 server {
-    listen 5553;
+    listen 6060;
     index index.php index.html;
-    server_name localhost;
+    server_name *.liumapp.com;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/php/;
+    root /var/www/demo/web/;
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -14,5 +14,12 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+        # Some basic cache-control for static files to be sent to the browser
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
     }
 }
