--- a/conf/vhosts/demo.conf
+++ b/conf/vhosts/demo.conf
@@ -4,12 +4,12 @@ server {
     server_name localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/demo/;
+    root /var/www/demo/web/;
 
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php5:9000;
+        fastcgi_pass php5.6:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
